[package]
name = "mazzaroth-rs"
version = "0.2.2"
authors = ["Kochavalabs <dev@mazzaroth.io>"]
description = "Mazzaroth Rust library"
license = "MIT"
homepage = "https://github.com/kochavalabs/mazzaroth-rs"
repository = "https://github.com/kochavalabs/mazzaroth-rs"
readme = "README.md"

[dependencies]
sha3 = "0.8.1"
cfg-if = "0.1.3"
wasm-bindgen = "0.2.20"
mazzaroth-xdr = { branch = "develop", version = "0.2.7" }
xdr-rs-serialize = { branch = "develop", version = "0.2.5" }

[features]
host-mock = []
