[package]
name = "mazzaroth-rs-derive"
version = "0.2.3"
authors = ["Kochavalabs <dev@mazzaroth.io>"]
description = "Mazzaroth Rust library derivation macros"
license = "MIT"
homepage = "https://github.com/kochavalabs/mazzaroth-rs"
repository = "https://github.com/kochavalabs/mazzaroth-rs"
readme = "README.md"

[dependencies]
syn = { version = "0.15.12" , features = ["full", "extra-traits", "parsing"] }
quote = "0.6.8"
proc-macro2 = "0.4"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.24"

[lib]
name = "mazzaroth_rs_derive"
proc-macro = true
