[package]
name = "mazzaroth-wasm-derive"
version = "0.1.0"
authors = ["jeffsimpson <jsimpson@kochava.com>"]

[dependencies]
syn = { version = "0.15.12" , features = ["full", "extra-traits"] }
quote = "0.6.8"
proc-macro2 = "0.4"
serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"

[lib]
name = "mazzaroth_wasm_derive"
proc-macro = true